--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "typescript": "^5.3.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.19.0"
   },
   "repository": {
     "type": "git",
