--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
     "seed": "ts-node prisma/seed.ts",
-    "seed:prod": "node scripts/seed-production.js"
+    "seed:prod": "node scripts/seed-production.js",
+    "init:prod": "node scripts/init-production.js"
   },
   "keywords": [
     "transportation",
