--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "seed": "ts-node prisma/seed.ts",
     "seed:prod": "node scripts/seed-production.js",
     "init:prod": "node scripts/init-production.js",
-    "auto-init": "node scripts/auto-init.js"
+    "auto-init": "node scripts/auto-init.js",
+    "init-db": "node scripts/init-db.js"
   },
   "keywords": [
     "transportation",
