--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: heavy-tracking-api
     env: node
     plan: free
-    buildCommand: npm install && npm run build && npx prisma generate && npx prisma migrate deploy
+    buildCommand: npm install && npm run build && npx prisma generate && npx prisma migrate deploy && node scripts/init-db.js
     startCommand: npm start
     envVars:
       - key: NODE_ENV
