--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Heavy Truck Tracking Transportation Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npx prisma generate && npx prisma migrate deploy && node scripts/init-db.js",
     "build:prod": "tsc && npx prisma generate && npx prisma migrate deploy",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
