--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Heavy Truck Tracking Transportation Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && npx prisma generate && npx prisma migrate deploy && node scripts/init-db.js",
-    "build:prod": "tsc && npx prisma generate && npx prisma migrate deploy",
+    "build": "tsc && npx prisma migrate deploy && npx prisma generate && node scripts/init-db.js",
+    "build:prod": "tsc && npx prisma migrate deploy && npx prisma generate",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest",
