--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Heavy Truck Tracking Transportation Management API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && npx prisma migrate deploy && npx prisma generate && node scripts/init-db.js",
+    "build": "tsc && npx prisma migrate deploy && npx prisma generate && node scripts/complete-init.js",
     "build:prod": "tsc && npx prisma migrate deploy && npx prisma generate",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
@@ -20,7 +20,7 @@
     "seed:prod": "node scripts/seed-production.js",
     "init:prod": "node scripts/init-production.js",
     "auto-init": "node scripts/auto-init.js",
-    "init-db": "node scripts/init-db.js"
+    "complete-init": "node scripts/complete-init.js",
   },
   "keywords": [
     "transportation",
