--- a/env.example
+++ b/env.example
@@ -2,6 +2,9 @@
 PORT=3000
 NODE_ENV=development
 
+# API Configuration
+API_BASE_URL=https://heavy-tracking-api.onrender.com/api/v1
+
 # Database
 DATABASE_URL="postgresql://username:password@localhost:5432/florida_sand_gravel"
 
